--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
  <link rel="stylesheet" href="design/css/application.css" type="text/css">
 
  
- <script type="text/javascript" src="js/senchatouch.js"></script> 
- <script type="text/javascript" src="js/phonegap.js"></script>
 
  <!-- Application JS -->
  <script type="text/javascript" src="js/app.js"></script>
@@ -24,6 +22,11 @@
  
 </head>
   
-  <body>
-  </body>
+<body style='margin: 0; padding: 0; height: 100%;'>
+	<div id='splash-image' 
+		 style='border: none; background-image: url("images/background.png"); background-repeat: no-repeat; background-position: center; float: left; top: 0; left: 0; width: 100%; height: 100%; padding: 0px; margin: 0px; vertical-align: middle;'></div>
+		 
+	<script type="text/javascript" src="js/senchatouch.js"></script> 
+	<script type="text/javascript" src="js/phonegap.js"></script>
+</body>
 </html>
