--- a/index.html
+++ b/index.html
@@ -3,30 +3,27 @@
 <!-- manifest="arc.manifest">-->
 
 <head>
- <meta charset="utf-8">
- <title>ARC</title>
- <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
- 
- <link rel="stylesheet" href="design/css/senchatouch.css" type="text/css">
- <link rel="stylesheet" href="design/css/arc.css" type="text/css">
- <link rel="stylesheet" href="design/css/application.css" type="text/css">
+	<meta charset="utf-8">
+	<title>ARC</title>
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
- 
-
- <!-- Application JS -->
- <script type="text/javascript" src="js/app.js"></script>
- <script type="text/javascript" src="js/models/arcc.js"></script>
- <script type="text/javascript" src="js/views/viewport.js"></script>
- <script type="text/javascript" src="js/views/photocard.js"></script>
- <script type="text/javascript" src="js/views/detailform.js"></script>
- 
-</head>
-  
-<body style='margin: 0; padding: 0; height: 100%;'>
-	<div id='splash-image' 
-		 style='border: none; background-image: url("images/background.png"); background-repeat: no-repeat; background-position: center; float: left; top: 0; left: 0; width: 100%; height: 100%; padding: 0px; margin: 0px; vertical-align: middle;'></div>
-		 
+	<link rel="stylesheet" href="design/css/senchatouch.css" type="text/css">
+	<link rel="stylesheet" href="design/css/arc.css" type="text/css">
+	<link rel="stylesheet" href="design/css/application.css" type="text/css">
+			 
 	<script type="text/javascript" src="js/senchatouch.js"></script> 
 	<script type="text/javascript" src="js/phonegap.js"></script>
+ 
+	<!-- Application JS -->
+	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="js/models/arcc.js"></script>
+	<script type="text/javascript" src="js/views/viewport.js"></script>
+	<script type="text/javascript" src="js/views/photocard.js"></script>
+	<script type="text/javascript" src="js/views/detailform.js"></script> 
+</head>
+  
+<body onload="onLoad()" style='margin: 0; padding: 0; height: 100%;'>
+	<div id='splash-image' 
+		 style='border: none; background-image: url("images/background.png"); background-repeat: no-repeat; background-position: center; float: left; top: 0; left: 0; width: 100%; height: 100%; padding: 0px; margin: 0px; vertical-align: middle;'></div>
 </body>
 </html>
