Added tinkering with phonegap

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="design/css/application.css" type="text/css">
 			 
 	<script type="text/javascript" src="js/senchatouch.js"></script> 
-	<script type="text/javascript" src="js/phonegap.js"></script>
+	<script type="text/javascript" src="js/phonegap0951.js"></script>
  
 	<!-- Application JS -->
 	<script type="text/javascript" src="js/app.js"></script>
