Rewrote to controller

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 	<title>ARC</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
-	<link rel="stylesheet" href="design/css/senchatouch.css" type="text/css">
-	<link rel="stylesheet" href="design/css/arc.css" type="text/css">
 	<link rel="stylesheet" href="design/css/application.css" type="text/css">
+	<link rel="stylesheet" href="design/css/arc.css" type="text/css">
 			 
 	<script type="text/javascript" src="js/senchatouch.js"></script> 
 	<script type="text/javascript" src="js/phonegap0951.js"></script>
@@ -20,10 +19,9 @@
 	<script type="text/javascript" src="js/views/viewport.js"></script>
 	<script type="text/javascript" src="js/views/photocard.js"></script>
 	<script type="text/javascript" src="js/views/detailform.js"></script> 
+	<script type="text/javascript" src="js/controllers/arccController.js"></script> 
 </head>
   
-<body onload="onLoad()" style='margin: 0; padding: 0; height: 100%;'>
-	<div id='splash-image' 
-		 style='border: none; background-image: url("images/background.png"); background-repeat: no-repeat; background-position: center; float: left; top: 0; left: 0; width: 100%; height: 100%; padding: 0px; margin: 0px; vertical-align: middle;'></div>
+<body onload="onLoad()">
 </body>
 </html>
